Fix alignment with hero section

--- a/styles.css
+++ b/styles.css
@@ -61,10 +61,15 @@ header nav ul li {
 #hero {
     background-color: #1F2937;
     padding: 100px 0;
+    
+}
+
+.container {
+    width: 80%;
     display: flex;
     justify-content: space-around;
-    width: 100%;
     align-items: center;
+    margin: 0 auto;
 }
 
 #hero  h1 {
